force-app/main/default/objects/FT_Orders__c/FT_Orders__c.object-meta.xml
<CustomObject>
    <label>FT-Orders</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>FT-Orders Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FT-Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>