force-app/main/default/objects/FT_Orders__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>FT_Order_Items__c.Price__c</summarizedField>
    <summaryForeignKey>FT_Order_Items__c.FT_Orders__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>