force-app/main/default/objects/FT_Orders__c/fields/Promotion_Applied__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Applied__c</fullName>
    <label>Promotion Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>