force-app/main/default/objects/FT_Orders__c/fields/Total_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Quantity__c</fullName>
    <label>Total Product Quantity</label>
    <summaryForeignKey>FT_Order_Items__c.FT_Orders__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>